add_subdirectory(plugin)

file(GLOB LMP_HEADER *.h)
file(GLOB LMP_SRC *.cpp)
file(GLOB LMP_SHSCRIPT *.sh)

unset(LMP_INSTALL_FILES)
list(APPEND LMP_INSTALL_FILES ${LMP_HEADER})
list(APPEND LMP_INSTALL_FILES ${LMP_SRC})
list(APPEND LMP_INSTALL_FILES ${LMP_SHSCRIPT})

if(DP_USING_C_API)
  if(TENSORFLOW_LINK_LIBPYTHON)
    configure_file("env_py_c.sh.in" "env.sh" @ONLY)
  else()
    configure_file("env_c.sh.in" "env.sh" @ONLY)
  endif()
else()
  if(TENSORFLOW_LINK_LIBPYTHON)
    configure_file("env_py.sh.in" "env.sh" @ONLY)
  else()
    configure_file("env.sh.in" "env.sh" @ONLY)
  endif()
endif()

configure_file("deepmd_version.h.in" "deepmd_version.h" @ONLY)
configure_file("lammps_install_list.txt.in" "lammps_install_list.txt" @ONLY)
